--- a/app/src/main/res/layout/fragment_goods_cart.xml
+++ b/app/src/main/res/layout/fragment_goods_cart.xml
@@ -15,6 +15,18 @@
 
         <import type="android.view.View"/>
 
+        <variable
+            name="check"
+            type="Boolean" />
+
+        <variable
+            name="totalprice"
+            type="String" />
+
+        <variable
+            name="gopay"
+            type="String" />
+
     </data>
 
 
@@ -175,7 +187,8 @@
             android:clickable="true"
             android:textColor="@color/text_common_bg"
             android:text="@string/all"
-            android:button="@drawable/checkbox_goods_cart_bg"
+            android:checked="@={check}"
+            android:button="@drawable/checkbox_bg"
             android:minHeight="64dp"
             android:layout_marginStart="@dimen/margin_15"
             android:layout_marginEnd="@dimen/margin_15"
@@ -192,7 +205,7 @@
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
             android:gravity="center"
-            android:text="结算(0)"
+            android:text="@{gopay}"
             android:layout_width="100dp"
             android:layout_height="60dp" />
 
@@ -226,7 +239,7 @@
                         android:layout_height="wrap_content" />
                     <TextView
                         android:id="@+id/total_price"
-                        android:text="¥0.00"
+                        android:text="@{totalprice}"
                         android:textSize="16sp"
                         android:padding="@dimen/margin_5"
                         android:gravity="center"
