--- a/app/src/main/res/layout/item_shopcat_product.xml
+++ b/app/src/main/res/layout/item_shopcat_product.xml
@@ -96,11 +96,64 @@
                     android:textStyle="bold" />
 
                 <LinearLayout
+                    android:layout_width="80dp"
+                    android:layout_height="20dp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentRight="true"
+                    android:background="@drawable/bg_buy_count"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/reduce_goodsNum"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:textSize="12sp"
+                        android:textColor="@color/text_222222"
+                        android:gravity="center"
+                        android:text="-" />
+
+                    <View
+                        android:layout_width="1dp"
+                        android:layout_height="match_parent"
+                        android:background="@color/white"
+                        />
+
+                    <TextView
+                        android:id="@+id/tv_goods_count"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1.5"
+                        android:text="1"
+                        android:gravity="center"
+                        android:textColor="@color/text_222222"
+                        android:textSize="12sp" />
+
+                    <View
+                        android:layout_width="1dp"
+                        android:layout_height="match_parent"
+                        android:background="@color/white"
+                        />
+
+                    <TextView
+                        android:id="@+id/increase_goods_Num"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:textSize="12sp"
+                        android:gravity="center"
+                        android:textColor="@color/text_222222"
+                        android:text="+" />
+                </LinearLayout>
+
+                <!--<LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="26dp"
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentRight="true"
                     android:gravity="center"
+                    android:visibility="gone"
                     android:orientation="horizontal">
 
                     <ImageView
@@ -131,7 +184,7 @@
                         android:id="@+id/increase_goods_Num"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent" />
-                </LinearLayout>
+                </LinearLayout>-->
             </RelativeLayout>
         </RelativeLayout>
 
