--- a/app/src/main/res/layout/adapter_chuangke.xml
+++ b/app/src/main/res/layout/adapter_chuangke.xml
@@ -9,6 +9,8 @@
             name="goodslist"
             type="com.lzyyd.hsq.bean.GoodsListBean" />
 
+        <import type="android.view.View"/>
+
     </data>
 
 <LinearLayout
@@ -69,6 +71,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/grey_color3"
+                    android:text="@{goodslist.beginDate}"
+                    android:visibility="@{goodslist.isPresell == 1 ? View.VISIBLE : View.GONE}"
                     android:textSize="14dp" />
 
                 <TextView
@@ -98,56 +102,63 @@
                     android:textStyle="bold" />
 
                 <LinearLayout
-                    android:layout_width="80dp"
-                    android:layout_height="20dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentRight="true"
-                    android:background="@drawable/bg_buy_count"
                     android:gravity="center_vertical"
+                    android:visibility="@{goodslist.qty == 0 ? View.VISIBLE : View.GONE}"
                     android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/reduce_goodsNum"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:textSize="12sp"
-                        android:textColor="@color/text_222222"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:textSize="14sp"
+                        android:textColor="#ffe61d15"
                         android:gravity="center"
+                        android:background="@drawable/bg_chuangke_decrese"
                         android:text="-" />
 
-                    <View
-                        android:layout_width="1dp"
-                        android:layout_height="match_parent"
-                        android:background="@color/white"
-                        />
 
                     <TextView
                         android:id="@+id/tv_goods_count"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1.5"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:text="0"
+                        android:layout_marginLeft="@dimen/margin_5"
+                        android:layout_marginRight="@dimen/margin_5"
                         android:gravity="center"
-                        android:textColor="@color/text_222222"
-                        android:textSize="12sp" />
+                        android:textColor="@color/grey_333333"
+                        android:textSize="14sp" />
 
-                    <View
-                        android:layout_width="1dp"
-                        android:layout_height="match_parent"
-                        android:background="@color/white"
-                        />
 
                     <TextView
                         android:id="@+id/increase_goods_Num"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:textSize="12sp"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:textSize="14sp"
                         android:gravity="center"
-                        android:textColor="@color/text_222222"
+                        android:textColor="@color/white"
+                        android:background="@drawable/bg_chuangke_increase"
                         android:text="+" />
                 </LinearLayout>
+
+                <TextView
+                    android:id="@+id/tv_choose"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentRight="true"
+                    android:visibility="@{goodslist.qty == 0 ? View.GONE : View.VISIBLE}"
+                    android:background="@drawable/bg_chuangke_choose"
+                    android:text="选规格"
+                    android:layout_marginBottom="@dimen/margin_5"
+                    android:paddingRight="@dimen/margin_10"
+                    android:paddingLeft="@dimen/margin_10"
+                    android:textColor="#ffffffff"
+                    android:textSize="14sp"
+                    />
 
 
             </RelativeLayout>
