--- a/app/src/main/res/layout/popup_goods_format.xml
+++ b/app/src/main/res/layout/popup_goods_format.xml
@@ -2,7 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:lzy="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/rl_pop"
+    android:background="#33000000">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -50,7 +52,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="库存 854865件"
+                            android:text="库存"
                             android:textColor="#ff999999"
                             android:textSize="13sp"/>
 
