--- a/app/src/main/res/layout/fragment_all_order.xml
+++ b/app/src/main/res/layout/fragment_all_order.xml
@@ -19,12 +19,13 @@
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/refreshLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:background="@color/line_bg"
+        >
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/all_order_rv"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="@dimen/margin_15"/>
+            android:layout_height="wrap_content"/>
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
