--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -32,4 +32,6 @@
 
     <color name="red_e61d15">#E61D15</color>
     <color name="line_DDDDDD">#DDDDDD</color>
+
+    <color name="RED_E00000">#E00000</color>
 </resources>
